--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,9 @@
 .opacidad{
     position: absolute;
     z-index: 1;
-    width: 87%;
+    width: 50%;
     height: 250px;
-    background: rgba(0,0,0,0.3);
+    background: rgba(165, 161, 161, 0.6);
     opacity: 0;
 }
 
