--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,37 @@
+
+.img::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.img::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.img::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #d19494;
+}
+
+
 *{
     margin: 0;
     padding: 0;
 }
 
+body{
+    background: rgba(165, 161, 161, 0.6);
+}
+
 .img{
     direction: rtl;
-    margin: 20px;
+    margin: 30px 0;
     overflow-y: scroll;
     width: 100%;
     height: 250px;
@@ -31,27 +57,19 @@
 }
 
 @media(max-width: 992px){
-    .opacidad{
-        width: 93%;
-    }
+    
 }
 
 @media(max-width: 780px){
-    .opacidad{
-        width: 84%;
-    }
+    
 }
 
 @media(max-width: 768px){
-    .opacidad{
-       
-    }
+    
 }
 
 @media(max-width: 670px){
-    .opacidad{
-        
-    }
+    
 }
 
 @media(max-width: 576px){
